# jokosher-ng

./: .buildconfig  README.md  meson.build  org.gnome.Jokosher.json
data/: meson.build  org.gnome.Jokosher.appdata.xml.in  org.gnome.Jokosher.desktop.in  org.gnome.Jokosher.gschema.xml
data/icons/: meson.build
data/images/: meson.build
data/instruments/: meson.build
po/: POTFILES  meson.build
src/: addinstrumentdialog.py  audiobackend.py  event.py  eventlaneviewer.py  eventlineviewer.py  eventviewer.py  exportdialog.py  globals.py  instrument.py  instrumentinfobox.py  instrumentinfopane.py  instrumentviewer.py  jokosher.css  jokosher.gresource.xml  jokosher.in  jokosherapplication.py  jokosherenums.py  jokosherpreferences.py  levelslist.py  main.py  meson.build  mixerstrip.py  project.py  projectdialog.py  projectutilities.py  recordingview.py  scale.py  settings.py  timeline.py  timelinebar.py  timelineclock.py  transportmanager.py  utils.py  volumecontrol.py  volumecontrolinstrument.py  volumecontrolmain.py  window.py  window.ui  workspace.py
src/gtk/: addinstrumentdialog.ui  projectdialog.ui  projectentry.ui
src/platform_utils/: __init__.py  unix.py  windows.py
src/widgets/: projectentry.py
