application_id = 'org.gnome.Jokosher'

image_files = [
    'icon_arm.png',
    'icon_cancel.png',
    'icon_click.png',
    'icon_disarm.png',
    'icon_effectsapply.png',
    'icon_fpdelete.png',
    'icon_fpsnap.png',
    'icon_group.png',
    'icon_mix.png',
    'icon_record.png',
    'icon_solo.png',
    'icon_split.png',
    'icon_trim.png',
    'jokosher.ico',
    'jokosher-logo.png',
    'stock_volume.png',
    'stock_volume-mute.png',
]

install_data(
  image_files,
  install_dir: join_paths(get_option('datadir'), 'jokosher', 'images')
)