application_id = 'org.gnome.Jokosher'

instrument_files = [
    'acousticguitar.instr',
]

install_data(
  instrument_files,
  install_dir: join_paths(get_option('datadir'), 'jokosher', 'instruments')
)

instrument_image_files = [
    'images/acousticguitar.png',
]

install_data(
  instrument_image_files,
  install_dir: join_paths(get_option('datadir'), 'jokosher', 'instruments', 'images')
)
