application_id = 'org.gnome.Jokosher'

instrument_files = [
    'acousticguitar.instr',
    'audiofile.instr',
    'bassdrum.instr',
    'bassguitar.instr',
    'cello.instr',
    'cymbal.instr',
    'drumkit.instr',
    'effect.instr',
    'electricguitar.instr',
    'harmonica.instr',
    'keyboard.instr',
    'other.instr',
    'saxophone.instr',
    'snare.instr',
    'tomtom.instr',
    'trumpet.instr',
    'violin.instr',
    'vocal.instr'
]

install_data(
  instrument_files,
  install_dir: join_paths(get_option('datadir'), 'jokosher', 'instruments')
)

instrument_image_files = [
    'images/acousticguitar.png',
    'images/audiofile.png',
    'images/bassdrum.png',
    'images/bassguitar.png',
    'images/cello.png',
    'images/cymbal.png',
    'images/drumkit.png',
    'images/effect.png',
    'images/electricguitar.png',
    'images/harmonica.png',
    'images/keyboard.png',
    'images/other.png',
    'images/saxophone.png',
    'images/snare.png',
    'images/tomtom.png',
    'images/trumpet.png',
    'images/violin.png',
    'images/vocal.png'
]

install_data(
  instrument_image_files,
  install_dir: join_paths(get_option('datadir'), 'jokosher', 'instruments', 'images')
)
